# TrackJobs

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  main.py  main_mvc.py  pyproject.toml  requirements.md
.github/workflows/: testes.yml
docs/: arquitetura.md  requirements.md
test/: conftest.py  db_test.py  fixtures.py  test_cadastro.py  test_edicao.py  test_menu.py  test_remocao.py  test_status.py  test_validacao.py  test_visualizacao.py
test/controller/: test_job_controller.py
test/integration/: test_cadastro_integracao.py
test/model/: test_job_model.py
test/model/entities/: __init__.py  test_empresa_entity.py  test_vaga_entity.py
test/model/repositories/: __init__.py  test_base_repository.py  test_sqlite_empresa_repository.py  test_sqlite_vaga_repository.py
test/model/services/: __init__.py  test_candidatura_service.py
test/model/services/validadores/: __init__.py  test_empresa_validador_service.py  test_vaga_validador_service.py  test_validador_service.py
trackJobs/: banco_de_dados.py  cadastro.py  edicao.py  exceptions.py  main.py  menu.py  remocao.py  status.py  utils.py  validador.py  visualizacao.py
trackJobs/controller/: job_controller.py
trackJobs/model/: cadastro.py  job_model.py  validador.py
trackJobs/model/entities/: candidatura.py  empresa.py  vaga.py
trackJobs/model/repositories/SQLite/: base_repository.py  sqlite_candidatura_repository.py  (+2 more)
trackJobs/model/services/: candidatura_service.py
trackJobs/view/: cadastro_cli.py  cli.py  edicao_cli.py
trackJobs/view/menus/: menu.py  menu_edicao.py
(+6 files in other folders)
