[tool.poetry]
name = "trackjobs"
version = "0.1.0"
description = ""
authors = ["Pedro Borges <p260628@dac.unicamp.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.9.4"
click = "^8.1.8"
commitizen = "^4.1.0"
validators = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
